--- a/Assignment AD.csproj
+++ b/Assignment AD.csproj
@@ -46,6 +46,11 @@
     <Compile Include="Exercise2.cs" />
     <Compile Include="Exercise1.cs" />
     <Compile Include="Exercise3.cs" />
+    <Compile Include="Exercise4.cs" />
+    <Compile Include="Exercise5.cs" />
+    <Compile Include="Exercise6.cs" />
+    <Compile Include="Exercise7.cs" />
+    <Compile Include="Exercise8.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
